cmake_minimum_required(VERSION 3.20)

##########################################################################
##########################################################################

option(BUILD_STATIC_LIBS "" ON)
option(BUILD_SHARED_LIBS "" OFF)
add_subdirectory(llhttp-release-v9.1.3)

##########################################################################
##########################################################################
